# ColorPicker

./: CMakeLists.txt  README.md  colorPicker.kdev4  config.yaml
.kdev4/: colorPicker.kdev4
src/: colorPicker.cpp  colorPickerRec.cpp
